Update project files

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,14 +7,12 @@ http {
     server app:3000;
   }
 
-  # Redirect HTTP to HTTPS
   server {
     listen 80;
     server_name _;
     return 301 https://$host$request_uri;
   }
 
-  # HTTPS server
   server {
     listen 443 ssl;
     server_name goldcargo24.kz www.goldcargo24.kz;
@@ -24,9 +22,26 @@ http {
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
 
-    # Max upload size for XLSX files
-    client_max_body_size 50m;
+    client_max_body_size 200m;
+
+    # Security headers
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Frame-Options "DENY" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
+
+    # Cache static Next.js assets
+    location /_next/static/ {
+      proxy_pass http://app;
+      add_header Cache-Control "public, max-age=31536000, immutable";
+      add_header X-Frame-Options "DENY" always;
+      add_header X-Content-Type-Options "nosniff" always;
+    }
 
     location / {
       proxy_pass http://app;
