--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,6 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD:-cargo_secret}
     volumes:
       - pgdata:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U cargo -d lolagoldcargo"]
       interval: 10s
@@ -30,11 +28,11 @@ services:
       DATABASE_URL: "postgresql://cargo:${DB_PASSWORD:-cargo_secret}@postgres:5432/lolagoldcargo?schema=public"
       NODE_ENV: production
     ports:
-      - "3000:3000"
+      - "127.0.0.1:3000:3000"
     depends_on:
       postgres:
         condition: service_healthy
-    command: sh -c "npx prisma migrate deploy && npx prisma db seed && node server.js"
+    command: sh -c "prisma db push --accept-data-loss && prisma db seed && node server.js"
 
   nginx:
     image: nginx:alpine
